wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
